RESOLVED FIXED54834
Fix another crash when a plug-in is destroyed when evaluating JavaScript
https://bugs.webkit.org/show_bug.cgi?id=54834
Summary Fix another crash when a plug-in is destroyed when evaluating JavaScript
Anders Carlsson
Reported 2011-02-20 14:41:54 PST
Fix another crash when a plug-in is destroyed when evaluating JavaScript
Attachments
Patch (11.27 KB, patch)
2011-02-20 14:47 PST, Anders Carlsson
sam: review+
Anders Carlsson
Comment 1 2011-02-20 14:47:00 PST
Anders Carlsson
Comment 2 2011-02-20 15:04:39 PST
Note You need to log in before you can comment on or make changes to this bug.